# Project-Timetravel

./: .gitignore  LICENSE  README.md
game/: CMakeLists.txt
game/assets/textures/: none.pyxel
game/assets/textures/characters/: npc.pyxel  player.pyxel  player_startscene.pyxel  wizard.pyxel  wizzard_startscene.pyxel
game/cmake_modules/: FindSFML.cmake
game/other/: Info.plist  Launch Screen.storyboard
game/source/: Actor.cpp  Actor.h  ActorEmitter.cpp  ActorEmitter.h  Altar.cpp  Altar.h  Background.cpp  Background.h  Bookshelf.cpp  Bookshelf.h  Clouds.cpp  Clouds.h  ContactListener.cpp  ContactListener.h  Cutscene.cpp  Cutscene.h  Dialog.cpp  Dialog.h  Entity.h  EntityManager.cpp  EntityManager.h  FakeCharacter.cpp  FakeCharacter.h  GUIManager.cpp  GUIManager.h  KeyEntity.cpp  KeyEntity.h  LoadingScreen.cpp  LoadingScreen.h  Math.cpp  Math.h  NPC.cpp  NPC.h  ParticleEmitter.cpp  ParticleEmitter.h  PlayerEntity.cpp  PlayerEntity.h  Portal.cpp  Portal.h  PulsatingLight.cpp  (+12 more)
